nexus-rt/tests/ui/callback_missing_ctx.stderr
error[E0599]: no method named `into_callback` found for fn item `for<'a> fn(Res<'a, Config>, u32) {bad_callback}` in the current scope
  --> tests/ui/callback_missing_ctx.rs:21:28
   |
21 |     let _cb = bad_callback.into_callback(MyCtx, &reg);
   |                            ^^^^^^^^^^^^^ method not found in `for<'a> fn(Res<'a, Config>, u32) {bad_callback}`
